examples/python/bad/srp.py
class DataSaver:

    def read(self):
        print("read data...")
        print("parsing data...")

    def save(self):
        print("save data...")


saver = DataSaver()
saver.read()
saver.save()